# artificial-neural-network

./: .gitattributes  .gitignore  Backpropagation.ipynb  Dockerfile  README.md  normalize_dataset_run.py  pyproject.toml  pyrightconfig.json  saved_model.txt  test_toy_set.py
artificial_neural_network/: Backpropagation.ipynb  backpropagation_tester.py  base_model.py  gradient_checking.py  kfold_crossvalidation.py  mlp.py  normalization.py  one_hot_encoder.py  saved_model.txt  sigmoid.py
artificial_neural_network/backpropagation/: .initial_weights.txt.swp
benchmarks/: backprop1.txt  backprop2.txt  dataset1.txt
datasets/: house_votes_84_normalized.tsv  toy_normalized.csv  wine_recognition_normalized.tsv
tests/: test_artificial_neural_network.py
tests/artificial_neural_network/: normalization_test.py
