[tool.poetry]
name = "artificial-neural-network"
version = "0.1.0"
description = ""
authors = ["Matheus Westhelle <matheus.westhelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
pandoc = "^1.0.2"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
